--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
 <h1>Cadastro de Produtos</h1>
 
-<app-list-card-produtos></app-list-card-produtos>
+<app-list-card-produtos [produtos]="listaProdutos">    
+</app-list-card-produtos>
 
-<app-tabela-produtos></app-tabela-produtos>
+<app-tabela-produtos [lista]="listaProdutos">    
+</app-tabela-produtos>
 
-<app-form-produtos></app-form-produtos>
+<app-form-produtos (onSalvar)="inserir($event)">
+</app-form-produtos>
